--- a/admin/scss/_forms.scss
+++ b/admin/scss/_forms.scss
@@ -8,7 +8,7 @@
 
 /** ----------------------------------------------------
  * Basic form fields
- * ---------------------------------------------------- */	
+ * ---------------------------------------------------- */
 
 form.nostyle {
 	@include clear-form-field-styles();
@@ -50,8 +50,8 @@ form.nostyle {
 		font-style: normal;
 		color: $color-text;
 		clear:none;
-	}	
-	label {		
+	}
+	label {
 		&.left {
 			float: left;
 			display: block;
@@ -60,21 +60,21 @@ form.nostyle {
 			line-height: $grid-y * 2;
 			font-weight: bold;
 			@include text-shadow(1px 1px 0 $color-text-shadow);
-		}		
+		}
 		&.right {
 			cursor: pointer;
-			clear: both;			
+			clear: both;
 			color: lighten($color-text, 20%);
 			display: block;
 			font-style: italic;
 			margin: $grid-y/2 0 0 $grid-x*23;
-		}		
+		}
 	}
-	
+
 	.middleColumn {
 		margin-left: $grid-x * 23;
 	}
-	
+
 	span.readonly {
 		padding-top: $grid-y;
 		line-height: $grid-y * 2;
@@ -95,11 +95,11 @@ form.nostyle {
 		line-height: $grid-y * 2;
 		margin: $grid-y/2 0 0 $grid-x*23; // left align with .middleColumn
 	}
-	
+
 	&.checkbox .description, &.ss-gridfield .description {
 		margin-left: 0;
 	}
-	
+
 	input.text,
 	textarea,
 	select,
@@ -116,7 +116,7 @@ form.nostyle {
 		}
 	}
 
-	input.text, 
+	input.text,
 	textarea,
 	.TreeDropdownField {
 		background: #fff;
@@ -129,14 +129,14 @@ form.nostyle {
 		@include transition(0.2s border ease-in);
 		@include border-radius(4px);
 		@include background-image(linear-gradient(#EAEAEA, #fff 10%));
-	
+
 		&:focus {
 			border: 1px solid lighten($color-medium-separator, 10%);
 			border-top-color: $color-medium-separator;
 			@include box-shadow(0 1px 3px rgba(0,0,0,0.2) inset);
 		}
 	}
-	
+
 	input[disabled], input.disabled,
 	textarea[disabled], textarea.disabled,
 	select[disabled], select.disabled {
@@ -245,7 +245,7 @@ form.small .field, .field.small {
 			width: $grid-x * 14;
 		}
 	}
-	
+
 	.middleColumn {
 		margin-left: $grid-x * 15;
 	}
@@ -258,19 +258,19 @@ form.small .field, .field.small {
 	}
 }
 
-.field {	
+.field {
 	/* TreeDropdowns */
 	.TreeDropdownField {
 		padding: 0;
-		
+
 		.treedropdownfield-panel {
 			border: 1px solid lighten($color-medium-separator, 20%);
 			border-top: none;
-			
+
 			@include border-bottom-left-radius(4px);
 			@include border-bottom-right-radius(4px);
 		}
-		
+
 		&.treedropdownfield-open-tree {
 			@include border-bottom-left-radius(0);
 			@include border-bottom-right-radius(0);
@@ -297,21 +297,21 @@ form.small .field, .field.small {
 			display: none;
 		}
 	}
-	
+
 	/* dropdowns */
 	.dropdown {
 		select {
 			margin-top: $grid-y;
 		}
 	}
-	
+
 	/* chzn override */
 	.chzn-container {
 		max-width: 512px;
 		vertical-align: bottom;
-		
+
 		.chzn-results {
-			
+
 			li {
 				font-size: 11px;
 				line-height: $grid-y * 2;
@@ -324,22 +324,22 @@ form.small .field, .field.small {
 	  		border: 1px solid lighten($color-medium-separator, 10%);
 		}
 	}
-	
+
 	.chzn-container-single .chzn-single  {
 		height: 30px;
 		line-height: 30px; /* not relative, as then we'd had to redo most of chzn */
 		font-size: $font-base-size;
-		
+
 		@include background-image(linear-gradient(#efefef, #fff 10%, #fff 90%, #efefef));
-		
-		
+
+
 		&:hover, &:focus, &:active {
 			text-decoration: none;
 		}
-	
+
 		div {
 			width: 24px;
-	
+
 			b {
 				background-position: 4px 3px;
 			}
@@ -358,16 +358,16 @@ form.small .field, .field.small {
 			height: 18px;
 		}
 	}
-	
+
 	/* Date Fields */
-	input.month, input.day, input.year { 
-		width: ($grid-x * 7); 
+	input.month, input.day, input.year {
+		width: ($grid-x * 7);
 	}
 
-	input.time { 
+	input.time {
 		width: ($grid-x * 11); // smaller time field, since input is restricted
 	}
-	
+
 	/* Hides borders in settings/access. Activated from JS */
 	&.remove-splitter {
 		border-bottom: none;
@@ -387,14 +387,14 @@ form.small .field, .field.small {
 			border: none;
 			color: $color-text-blue-link;
 			display: block;
-			font-weight:normal;	
+			font-weight:normal;
 			margin:0;
 			outline:none;
 			padding-left:10px;
-			padding-right:10px;	
-			text-align: left;			
-			text-shadow: none;	
-			white-space:normal;		
+			padding-right:10px;
+			text-align: left;
+			text-shadow: none;
+			white-space:normal;
 			&.ss-ui-action-destructive{
 				color: darken($color-error,25%);
 			}
@@ -402,10 +402,10 @@ form.small .field, .field.small {
 				padding-left:0;
 				padding-right:0;
 			}
-			&:hover, &:focus, &:active{	
-				@include box-shadow(none);		
+			&:hover, &:focus, &:active{
+				@include box-shadow(none);
 				outline:none;
-				background:none;				
+				background:none;
 				border:none;
 			}
 			&.loading {
@@ -413,8 +413,8 @@ form.small .field, .field.small {
 				.ui-button-text {
 					padding-left: 16px /* icon */ + ($grid-x/2);
 				}
-				
-				
+
+
 			}
 		}
 	}
@@ -441,7 +441,7 @@ form.small .field, .field.small {
 	}
 
 	input.loading, button.loading,
-	input.ui-state-default.loading, .ui-widget-content input.ui-state-default.loading, 
+	input.ui-state-default.loading, .ui-widget-content input.ui-state-default.loading,
 	.ui-widget-header input.ui-state-default.loading {
 		.ui-icon {
 			background: transparent url(../../images/network-save.gif) no-repeat 0 0;
@@ -471,6 +471,7 @@ form.small .field, .field.small {
 		cursor: pointer;
 		background-color: $color-button-generic;
 		white-space: nowrap;
+		border-radius: 3px;
 
 		@include background(
 			linear-gradient(color-stops(
@@ -511,39 +512,32 @@ form.small .field, .field.small {
 				padding-right: 0;
 			}
 		}
-		
-		/* constructive */
+
+		/*  */
 		&.ss-ui-action-constructive {
 			text-shadow:none;
-			font-weight: bold;
+			font-weight: 500;
 			color: $color-text-light;
 			border-color: $color-button-constructive-border;
-			border-bottom-color: darken($color-button-constructive-border, 10%);			
-			background-color: $color-button-constructive;
-			@include background(
-				linear-gradient(color-stops(
-					scale-color(lighten($color-button-constructive, 10%), $red:50%),
-					$color-button-constructive
-				))
-			);
+			box-shadow: 0 1px 0 #348F37;
+			background: $color-button-constructive;
+			border: none;
 			@include text-shadow(darken($color-button-constructive, 3%) 0 -1px -1px);
-	
+
+			&-dormant {
+
+			}
+
 			&.ui-state-hover, &:hover {
 				border-color: darken($color-button-constructive-border, 10%);
-				background-color: $color-button-constructive;
-				@include background(
-					linear-gradient(color-stops(
-						scale-color(saturate(lighten($color-button-constructive, 10%), 10%), $red:60%),
-						lighten($color-button-constructive, 5%)
-					))
-				);
+				background-color: darken($color-button-constructive, 5%);
 			}
 			&:active, &:focus, &.ui-state-active, &.ui-state-focus {
 				background-color: darken($color-button-constructive, 2%);
 				@include box-shadow(inset 0 1px 3px rgb(23, 24, 26), 0 1px 0 rgba(255, 255, 255, .6));
 			}
 		}
-		
+
 		/* destructive */
 		&.ss-ui-action-destructive {
 			color: $color-button-destructive;
@@ -555,7 +549,7 @@ form.small .field, .field.small {
 				font-size: $font-base-size - 2;
 			}
 		}
-			
+
 		&.ui-state-highlight {
 			background-color: $color-button-highlight;
 			border: 1px solid $color-button-highlight-border;
@@ -566,9 +560,9 @@ form.small .field, .field.small {
 			border: 0;
 			color: lighten($color-text-dark, 10%);
 			text-decoration: underline;
-			
+
 			@include box-shadow(none);
-			
+
 			&:hover {
 				text-decoration: none;
 				color: $color-text-dark;
@@ -579,7 +573,7 @@ form.small .field, .field.small {
 				color: lighten($color-text-dark, 20%);
 			}
 		}
-		
+
 		&.ss-ui-button-loading {
 			opacity: 0.8;
 		}
@@ -598,7 +592,7 @@ form.small .field, .field.small {
 			text-decoration: none;
 			font-weight: normal;
 			color: $color-text;
-			
+
 			&:hover {
 				@include box-shadow(none);
 				background: #dee3e8;
@@ -635,7 +629,7 @@ form.small .field, .field.small {
 			&.font-icon-search {
 				padding: 4px 5px;
 				margin-right: 6px;
-				
+
 				&::before {
 					font-size: 20px;
 				}
@@ -649,7 +643,7 @@ form.small .field, .field.small {
 			.ui-icon {
 				display: none;
 			}
-			
+
 			&.no-text {
 				&:hover,
 				&:active,
@@ -659,7 +653,7 @@ form.small .field, .field.small {
 					background: none;
 					color: darken($color-text, 10%);
 				}
-				
+
 				&::before {
 					margin: 0;
 				}
@@ -669,14 +663,25 @@ form.small .field, .field.small {
 
 	.ss-ui-buttonset {
 		.ui-button {
-			margin-left: -1px;
+			border-radius: 3px 0px 0px 3px;
+			border-left: 1px solid lighten($color-button-constructive, 5%);
+			border-right: 1px solid darken($color-button-constructive, 5%);
+
+			&:first-child {
+				border-left: 0px;
+			}
+
+			&:last-child {
+				border-radius: 0px 3px 3px 0px;
+				border-right: 0px;
+			}
 		}
 	}
 
 	.ss-ui-buttonset {
 		margin-left: 1px;
 	}
-	
+
 	.ss-ui-loading-icon {
 		background: url(../../images/network-save.gif) no-repeat;
 		display: block;
@@ -763,9 +768,9 @@ form.small .field, .field.small {
 			label {
 				float: none;
 				margin-left: 0;
-				
+
 				&.ss-ui-button {
-					float: left;	
+					float: left;
 				}
 			}
 			.description {
@@ -810,7 +815,7 @@ input.radio {
 .optionset {
 	padding-bottom: 8px;
 	padding-top: 8px;
-	
+
 	li {
 		float: left;
 		display: block;
@@ -825,7 +830,7 @@ input.radio {
 			padding-right: 0;
 			margin-right: 0;
 		}
-		
+
 		label {
 			display: inline;
 			cursor: pointer;
@@ -836,18 +841,18 @@ input.radio {
 	&.field {
 		padding-top: 0;
 	}
-	
+
 }
 
 
 /** ----------------------------------------------------
- * HTML Text 
+ * HTML Text
  * ---------------------------------------------------- */
 
 .htmleditor {
 
 	@include form-field-stacked;
-	
+
 	textarea {
 		visibility: hidden; // enabled by JS
 	}
@@ -855,7 +860,7 @@ input.radio {
 	.mceEditor {
 		input, select {
 			width: auto;
-		}	
+		}
 	}
 	label.left {
 		padding-bottom: $grid-y/2;
@@ -869,33 +874,33 @@ input.radio {
 
 
 /***************************************************************
-* On/Off Switch. 
+* On/Off Switch.
 * Supports switching between up to 5 values (used for Draft/Published)
 * Example html set-up:
-*	<fieldset class="switch-states size_2"> 			
-*		<div class="switch">				
+*	<fieldset class="switch-states size_2">
+*		<div class="switch">
 *			<input id="Draft" class="first" name="view" type="radio" checked>
-*			<label for="Draft">Draft</label>	
+*			<label for="Draft">Draft</label>
 *			<input id="Published" class="last" name="view" type="radio">
-*			<label for="Published">Published</label>						
-*			<span class="slide-button"></span>	
-*		</div>			
+*			<label for="Published">Published</label>
+*			<span class="slide-button"></span>
+*		</div>
 *	</fieldset>
 ****************************************************************/
-fieldset.switch-states{	
+fieldset.switch-states{
 	margin-right: 8px;
 
 	.switch{
 		border: 2px solid lighten(#2d3035,65%);
 		@include border-radius(3px);
 		-webkit-animation: bugfix infinite 1s; //Bugfix for older Webkit, including mobile Webkit.
-		background:lighten(#2d3035,69%); 
-		display: block;				
+		background:lighten(#2d3035,69%);
+		display: block;
 		height: 24px;
-		position: relative;			
+		position: relative;
 		width:100%;
 		z-index:5;
-		
+
 		label{
 			@include hide-text-overflow;
 			color:lighten($color-text-dark,40%);
@@ -904,9 +909,9 @@ fieldset.switch-states{
 			float:left;
 			font-weight:bold;
 			height: 100%;
-			line-height: 25px;		
+			line-height: 25px;
 			position:relative;
-			z-index:2;	
+			z-index:2;
 			min-width: 80px;
 			/* Make text unselectable in browsers that support that */
 			-webkit-touch-callout: none;
@@ -914,11 +919,11 @@ fieldset.switch-states{
 			-khtml-user-select: none;
 			-moz-user-select: none;
 			-ms-user-select: none;
-			user-select: none;			
+			user-select: none;
 			&:hover{
-				color:lighten($color-text-dark, 30%);	
-				color:rgba($color-text-dark,0.7);								
-			}	
+				color:lighten($color-text-dark, 30%);
+				color:rgba($color-text-dark,0.7);
+			}
 			span{
 				@include box-sizing('border-box');
 				@include hide-text-overflow;
@@ -930,59 +935,59 @@ fieldset.switch-states{
 		input {
 			opacity: 0;
 			filter: alpha(opacity = 0);
-			visibility:none;	
-			position: absolute;			
+			visibility:none;
+			position: absolute;
 			&:checked + label {
-				@include transition(all 0.3s ease-out 0s); 	
+				@include transition(all 0.3s ease-out 0s);
 				color: #fff;
 			}
 		}
 		.slide-button{
 			@include border-radius(3px);
-			@include transition(all 0.3s ease-out 0s); 	
-			background-color: #2b9c32; 
+			@include transition(all 0.3s ease-out 0s);
+			background-color: #2b9c32;
 			display:block;
 			height: 24px;
 			left: 0;
 			padding: 0;
 			position: absolute;
-			top: 0;	
-			z-index: 1;	
+			top: 0;
+			z-index: 1;
 		}
 	}
 
-	/*	
+	/*
 		Produce css for up to 5 states.
 
-		Note: with a little adjustment the switch can take more than 5 items, 
+		Note: with a little adjustment the switch can take more than 5 items,
 		but a dropdown would probably be more appropriate
 	*/
 	@for $i from 1 through 5 {
 		&.size_#{$i} {
-			label, .slide-button { 
-				width:  100% / $i;				
-			}	  			
+			label, .slide-button {
+				width:  100% / $i;
+			}
 			@if $i == 1{
 				label span{
 					padding-right:0; //even up the padding for a single item
 				}
 			}
-			input:checked:nth-of-type(2) ~ .slide-button {	
+			input:checked:nth-of-type(2) ~ .slide-button {
 				left: 100% / $i;
 			}
-			input:checked:nth-of-type(3) ~ .slide-button {	
+			input:checked:nth-of-type(3) ~ .slide-button {
 				left: (100% / $i) * 2;
 			}
-			input:checked:nth-of-type(4) ~ .slide-button {	
+			input:checked:nth-of-type(4) ~ .slide-button {
 				left: (100% / $i) * 3;
 			}
-			input:checked:nth-of-type(5) ~ .slide-button {	
+			input:checked:nth-of-type(5) ~ .slide-button {
 				left: (100% / $i) * 4;
 			}
-		} 
-	}		
-} 
-//old web-kit browser fix	
+		}
+	}
+}
+//old web-kit browser fix
 @-webkit-keyframes bugfix { from { position: relative; } to { position: relative; } }
 
 //Styling for filter/search dropdown
@@ -1147,4 +1152,3 @@ fieldset.switch-states{
 		}
 	}
 }
-
